<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_newnode"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_newnode"/>
    
    <item
        android:id="@+id/action_deleteall"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_deleteall"/>
    
    <item
        android:id="@+id/action_subscribe"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_subscribe"/>
    
    <item
        android:id="@+id/action_feed"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_feed"/>
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>
